# dslighting

./: .env.example  .gitignore  DEPENDENCY_CONFIGURATION.md  FEATURE_PACKAGE_CONTEXT.md  INSTALLATION.md  MANIFEST.in  PYPI_PUBLISHING.md  PYPI_QUICK_START.md  PYPI_STATUS_REPORT.md  PYPI_SUCCESS.md  README.md  README_PIP.md  SETUP_GUIDE.md  config.yaml  config.yaml.example  dslighting_cli.py  dslighting_cli_tools.py  pyproject.toml  quick_test.py  requirements.txt  requirements_local.txt  run_benchmark.py  setup.py  submission_bike-sharing-demand_6f2cbdf3.csv  submission_bike-sharing-demand_9af01a00.csv  submission_bike-sharing-demand_be3bb811.csv  submission_bike-sharing-demand_c7e6dce5.csv  submission_bike-sharing-demand_d40d2ff4.csv
.github/workflows/: deploy-website.yml
PIP_DOC/: API_KEY_ROTATION.md  INSTALLATION_GUIDE.md  INSTALLATION_OPTIONS.md  QUICK_START.md  README.md  README_PIP.md  RELEASE_NOTES_v1.8.2.md  RELEASE_NOTES_v1.8.3.md  RELEASE_NOTES_v1.9.0.md  RELEASE_NOTES_v1.9.1.md  RELEASE_NOTES_v1.9.10.md  RELEASE_NOTES_v1.9.11.md  RELEASE_NOTES_v1.9.2.md  RELEASE_NOTES_v1.9.3.md  RELEASE_NOTES_v1.9.4.md  RELEASE_NOTES_v1.9.5.md  RELEASE_NOTES_v1.9.6.md  RELEASE_NOTES_v1.9.7.md  RELEASE_NOTES_v1.9.8.md  RELEASE_NOTES_v1.9.9.md  WORKFLOW_QUICK_REFERENCE.md
assets/: README.md
benchmarks/: kaggle_evaluator.py
benchmarks/dabench/: registry.py
benchmarks/mlebench/: README.md  data.py  grade.py  grade_helpers.py  registry.py
benchmarks/sciencebench/: ScienceAgentBench.csv  __init__.py  data.py  grade.py
claude_doc/TODO/: .gitkeep  IMPROVEMENT_PLAN.md  PRIORITIZED_TASKS.md  QUICK_FIX_CHECKLIST.md  README.md
data/bike-sample/: train.csv
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATA_PREPARATION.md  FAQ.md  FEATURES.md  README.md  README_CN.md  README_EN.md  README_FR.md  README_JA.md  benchmark_system.md  python-api-guide.md
dsat/: __init__.py  config.py  runner.py
dsat/benchmark/: __init__.py  benchmark.py  datasci.py  mle.py  sciencebench.py
dsat/common/: constants.py  exceptions.py  typing.py
dsat/models/: __init__.py  candidates.py  formats.py  task.py
dsat/operators/: aflow_ops.py  autokaggle_ops.py  automind_ops.py  base.py  code.py  dsagent_ops.py  llm_basic.py
dsat/prompts/: aflow_prompt.py  aide_prompt.py  autokaggle_prompt.py  automind_prompt.py  common.py  data_interpreter_prompt.py  dsagent_prompt.py
dsat/services/: data_analyzer.py  llm.py  llm_single.py  sandbox.py  vdb.py  workspace.py
dsat/tasks/: __init__.py  handlers.py
dsat/tools/: __init__.py
dsat/utils/: context.py  dynamic_import.py  parsing.py
dsat/workflows/: __init__.py  base.py  factory.py
dslighting/: README.md  __init__.py
dslighting/agents/: __init__.py
dslighting/api/: __init__.py  agent.py  convenience.py
dslighting/benchmark/: __init__.py  base.py  base_benchmarks.py  custom.py  factory.py  mle_lite.py
dslighting/core/: __init__.py  agent.py  api_key_manager.py  config.py  config_builder.py  data_loader.py  dataset.py  global_config.py  task_detector.py
dslighting/datasets/: __init__.py
dslighting/operators/: __init__.py
dslighting/prompts/: __init__.py  aflow_prompt.py  aide_prompt.py  autokaggle_prompt.py  automind_prompt.py  base.py  builder.py  common.py  data_interpreter_prompt.py  dsagent_prompt.py  structured_builder.py
dslighting/registry/: __init__.py
dslighting/services/: __init__.py  data_analyzer.py  vdb.py
dslighting/state/: __init__.py  memory.py
dslighting/tasks/: __init__.py  mle_task_loader.py
dslighting/tools/: __init__.py  base.py
dslighting/training/: __init__.py
dslighting/utils/: __init__.py  context.py  defaults.py  package_detector.py
dslighting/workflows/: __init__.py  base_factory.py  base_factory.py.bak
examples/: README.md  correct_agent_usage.py  new_api_usage_example.py
examples/benchmark/: example_benchmark_usage.py
examples/dabench_to_mlebench/: DABENCH_QUICK_START.md  README.md  batch_convert_all.sh  batch_convert_easy.sh  convert_dabench_to_mlebench.py
examples/dslighting_api/: README.md  example_1_basic.py  example_2_advanced.py  example_3_migration.py  example_bike_sharing.py  run_bike_sharing.py
examples/kaggle_competition/: .gitignore  README.md  kaggle_auto_setup.py
examples/kaggle_titanic/: COMPARISON.md  QUICKSTART.md  README.md  add_kaggle_competition.py  prepare_data.py  run_titanic.py
examples/open_ended_demo/: .gitignore  README.md  main.py
job_scripts/aflow/: run_aflow_bike-sharing-demand.sh
job_scripts/aide/: run_aide_bike-sharing-demand.sh
job_scripts/autokaggle/: run_autokaggle_bike-sharing-demand.sh
job_scripts/automind/: run_automind_bike-sharing-demand.sh
job_scripts/data_interpreter/: run_data_interpreter_bike-sharing-demand.sh
job_scripts/deepanalyze/: run_deepanalyze_bike-sharing-demand.sh
job_scripts/dsagent/: run_dsagent_bike-sharing-demand.sh
mlebench/: cli.py  grade.py
mlebench/competitions/: README.md  dabench-0-mean-fare-paid  dabench-10-total-traded-quantity  dabench-117-which-variable-strongest  dabench-174-determine-skewness-fares  dabench-178-comprehensive-data-preprocessing  dabench-180-outlier-detection-fare  dabench-19-distribution-column-adheres  (+56 more)
scripts/: fix_all_chinese.py  fix_chinese.py  fix_registry_paths.py  setup_package_context.py
tests/: 5_MINUTE_QUICKSTART.md  BASE_AGENT_ALIAS.md  COMPLETE_SOLUTION.md  DIRECT_USAGE.md  DSAT_COMPLETE_ARCHITECTURE.md  DSLIGHTING_TEST_REPORT.md  DSLIGHTING_V2_REDESIGN.md  DSLINGTON_2_INHERITS_DSAT.md  FINAL_ARCHITECTURE.md  FINAL_BASE_AGENT_SOLUTION.md  FINAL_COMPLETE_SOLUTION.md  FINAL_SOLUTION.md  HOW_TO_ADD_OPERATORS_AND_PROMPTS.md  QUICKSTART.md  README.md  README_MY_WORKFLOW.md  START_HERE.md  TESTING_README.md  __init__.py  conftest.py  example_custom_operators_and_prompts.py  example_v2_design.py  execution_report.md  intelligent_agent_example.py  main.py  mlmaster2_example.py  my_first_custom_agent.py  run_my_agent_bike.py  run_my_workflow_bike.py  run_test.sh
web_ui/: .gitignore  QUICKSTART.md
website/: .deploy  README.md  package-lock.json  package.json
(+2271 files in other folders)
