[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dslighting"
version = "1.9.9"
description = "End-to-End Data Science Agent - Intelligent automation for data science tasks"
readme = "PIP_DOC/README_PIP.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [
    {name = "DSLighting Team"}
]
keywords = ["data-science", "agent", "automation", "machine-learning", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies for pip installation
# These are the minimum required dependencies for all workflows
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "pydantic>=2.10.0,<3.0.0",  # Updated for better OpenAI/litellm compatibility
    "python-dotenv>=1.0.0",
    # DSAT framework dependencies (required)
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "litellm>=1.80.0",
    "rich>=13.0.0",
    "transformers>=4.30.0",  # Required for VDBService (RAG)
    "torch>=2.0.0",  # Required for VDBService (RAG)
    "scikit-learn>=1.0.0,<2.0.0",
    # MLE-Bench dependencies (for grading)
    "diskcache",
    "tenacity",
    "appdirs",
    "pyyaml",
    "tqdm",
    "py7zr",
    # Notebook support (required for data_interpreter workflow)
    "nbformat>=5.0.0",
    "nbclient>=0.5.0",
    "ipykernel>=7.0.0",  # Required for Jupyter kernel in data_interpreter
]

# Optional dependencies for extended functionality
[project.optional-dependencies]
# Minimal installation (for testing/custom builds)
# Note: transformers and torch are still required for VDBService
minimal = [
    "pandas>=1.5.0,<3.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "litellm>=1.80.0",
    "rich>=13.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "diskcache",
    "tenacity",
    "appdirs",
    "pyyaml",
    "tqdm",
    "py7zr",
    "nbformat>=5.0.0",
    "nbclient>=0.5.0",
    "ipykernel>=7.0.0",
]

# Development dependencies (testing, linting, building)
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

# Legacy compatibility - keep 'full' and 'all' as aliases
# They now refer to the default installation since all dependencies are required
full = []
all = []

# Project URLs
[project.urls]
Homepage = "https://github.com/usail-hkust/dslighting"
Documentation = "https://luckyfan-cs.github.io/dslighting-web/api/getting-started.html"
Repository = "https://github.com/usail-hkust/dslighting"
"Bug Tracker" = "https://github.com/usail-hkust/dslighting/issues"
"Quick Start Guide" = "https://luckyfan-cs.github.io/dslighting-web/api/getting-started.html"
"Data System Docs" = "https://luckyfan-cs.github.io/dslighting-web/api/data-system.html"

# CLI entry points
[project.scripts]
dslighting = "dslighting_cli:main"
dslighting-detect = "dslighting_cli:main"

# Package discovery
[tool.setuptools.packages.find]
include = ["dslighting*", "dsat*", "mlebench*"]

# Include top-level Python modules
[tool.setuptools]
py-modules = ["dslighting_cli"]

[tool.setuptools.package-data]
dslighting = ["*.yaml", "*.json", "datasets/**/*.csv", "registry/**/*.yaml", "registry/**/*.md", "registry/**/*.py"]
dsat = ["*.yaml", "*.json", "configs/*.yaml", "workflows/*.yaml"]
# Include mlebench for grading functionality
mlebench = ["*.py", "*.yaml", "*.json", "*.md"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, may require external dependencies)",
    "slow: Slow-running tests (skip with -m 'not slow')",
    "requires_llm: Tests that require actual LLM API calls (may cost money)",
    "requires_data: Tests that require dataset files",
]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
